--- a/_posts/2020-07-09-meta-exam.md
+++ b/_posts/2020-07-09-meta-exam.md
@@ -67,6 +67,12 @@ example 2：
 
 都比较简单，就不写了，而且leetcode都有。
 
+下边俩图是当时写的代码。
+
+![/post_images/2020-07-09-metaApp/img_12.jpg]({{ '/post_images/2020-07-09-metaApp/img_12.jpg' | prepend: site.baseurl  }})
+
+![/post_images/2020-07-09-metaApp/img_3.jpg]({{ '/post_images/2020-07-09-metaApp/img_3.jpg' | prepend: site.baseurl  }})
+
 ------
 
 重点是第2题--股票问题，股票问题是个系列，而且在股票问题-III（leetcode 123题）的题解中，有一个基于状态机的通用解法，一招团灭。
